[gd_scene load_steps=3 format=3 uid="uid://f3huiswbxusu"]

[ext_resource type="Texture2D" uid="uid://bbhbyghr5cvdq" path="res://Design/Character Selection UI/Bush Screen.png" id="1_dsocy"]
[ext_resource type="Script" path="res://Scripts/CharacterSelection/CharacterSelection.gd" id="2_7t5ty"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(960, 539)
texture = ExtResource("1_dsocy")

[node name="Button" type="Button" parent="."]
visibility_layer = 0
layout_mode = 0
offset_left = 74.0
offset_top = 781.0
offset_right = 317.0
offset_bottom = 1022.0
script = ExtResource("2_7t5ty")

[node name="Button2" type="Button" parent="."]
visibility_layer = 0
layout_mode = 0
offset_left = 585.0
offset_top = 785.0
offset_right = 828.0
offset_bottom = 1024.0
script = ExtResource("2_7t5ty")

[node name="Button3" type="Button" parent="."]
visibility_layer = 0
layout_mode = 0
offset_left = 879.0
offset_top = 783.0
offset_right = 1122.0
offset_bottom = 1022.0
script = ExtResource("2_7t5ty")

[connection signal="pressed" from="Button" to="Button" method="loadTrump"]
[connection signal="pressed" from="Button2" to="Button2" method="loadReagan"]
[connection signal="pressed" from="Button3" to="Button3" method="loadBiden"]
